--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+
+<fragment
     android:id="@+id/main_browse_fragment"
     android:name="com.example.BrowseFragmentUsingRetrofit.MainFragment"
     android:layout_width="match_parent"
@@ -8,3 +14,5 @@
     tools:context=".MainActivity"
     tools:deviceIds="tv"
     tools:ignore="MergeRootFrame" />
+    <requestFocus/>
+</androidx.constraintlayout.widget.ConstraintLayout>
