--- a/app/src/main/res/layout/custom_title_view.xml
+++ b/app/src/main/res/layout/custom_title_view.xml
@@ -1,19 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-        android:id="@+id/title_tv"
-        android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_layout_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="24dp"
-        android:textAllCaps="true"
-        android:textSize="20sp"
-        android:textColor="@color/onFocus"
-        android:visibility="visible"
-        tools:text="My Title" />
+        android:paddingTop="@dimen/_2sdp"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:focusable="true"
+        >
+
+        <ImageView
+            android:id="@+id/search_badge"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_16sdp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_baseline_search_24"
+            android:focusable="true"
+            android:nextFocusRight="@id/wifi_badge"
+            android:nextFocusDown="@layout/fragment_main"
+            />
+
+    <ImageView
+        android:id="@+id/wifi_badge"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_16sdp"
+        android:src="@drawable/ic_baseline_wifi_24"
+        app:layout_constraintLeft_toRightOf="@id/search_badge"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="@dimen/_6sdp"
+        android:focusable="true"
+        android:nextFocusRight="@id/input_badge"
+        android:nextFocusDown="@layout/fragment_main"
+        />
+    <ImageView
+        android:id="@+id/input_badge"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_16sdp"
+        android:src="@drawable/ic_baseline_input_24"
+        app:layout_constraintLeft_toRightOf="@id/wifi_badge"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="@dimen/_16sdp"
+        android:focusable="true"
+        android:nextFocusRight="@id/setting_badge"
+        android:nextFocusDown="@layout/fragment_main"
+        />
+    <ImageView
+        android:id="@+id/setting_badge"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_16sdp"
+        android:src="@drawable/ic_baseline_settings_24"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/input_badge"
+        android:layout_marginLeft="@dimen/_16sdp"
+        android:focusable="true"
+        android:nextFocusRight="@id/menu_badge"
+        android:nextFocusDown="@layout/fragment_main"
+
+
+        />
+    <ImageView
+        android:id="@+id/menu_badge"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_16sdp"
+        android:src="@drawable/ic_outline_menu_open_24"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/setting_badge"
+        android:layout_marginLeft="@dimen/_16sdp"
+        android:focusable="true"
+        android:nextFocusRight="@id/search_badge"
+        android:nextFocusDown="@layout/fragment_main"
+
+        />
+        <ImageView
+            android:id="@+id/header_title"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            android:layout_width="@dimen/_80sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:src="@drawable/title_android_tv"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginRight="@dimen/_18sdp"
+            android:paddingBottom="@dimen/_10sdp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </merge>
