--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,7 +8,8 @@
     android:background="@drawable/selector"
     android:focusable="true"
     android:padding="@dimen/_1sdp"
-    tools:context=".MainFragment">
+    tools:context=".MainFragment"
+    >
 
                 <ImageView
                     android:id="@+id/poster_image"
