--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,9 @@
 <RelativeLayout
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/linear_layout"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:baselineAligned="false"
-    android:orientation="vertical"
     android:background="@color/background_gradient_start">
 
     <TextView
@@ -14,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginTop="20dp"
         android:background="@drawable/black_to_transparent_shade_horizontal"
+        android:fontFamily="sans-serif-black"
         android:text="Movie Name"
         android:textColor="@color/white"
         android:textSize="20sp" />
@@ -26,8 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/movie_name"
         android:layout_marginStart="20dp"
-        android:text="2022"
         android:layout_marginTop="20dp"
+        android:text="2022"
         android:textColor="@color/white"
         android:textSize="18sp" />
 
@@ -60,7 +58,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/yearOfProduction"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
         android:text="@string/Description"
         android:textColor="@color/white"
         android:textSize="14sp" />
@@ -69,7 +66,8 @@
         android:id="@+id/movie_poster"
         android:layout_width="506dp"
         android:layout_height="284dp"
-        android:layout_alignParentRight="true"
+        android:scaleType="centerInside"
+        android:layout_alignParentEnd="true"
         android:background="@drawable/black_to_transparent_shade_horizontal"
         />
     <ProgressBar
@@ -83,9 +81,7 @@
         android:id="@+id/main_browse_fragment"
         android:name="com.example.BrowseFragmentUsingRetrofit.MainFragment"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="480dp"
         android:layout_alignParentBottom="true"
-        tools:context=".MainActivity"
-        tools:deviceIds="tv"
       />
 </RelativeLayout>
