--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/Image_Container"
     android:layout_marginLeft="@dimen/_6sdp"
     android:background="@drawable/selector"
+    android:nextFocusUp="@layout/custom_title_view"
     android:padding="@dimen/_1sdp">
 
     <ImageView
@@ -15,6 +16,8 @@
         android:layout_height="wrap_content"
         android:src="@drawable/movie"
         android:focusable="true"
-        tools:ignore="MissingConstraints" />
+       app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
